--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=7">
   <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
   <link rel="stylesheet" href="bootstrap-4.5.3-dist/css/bootstrap.min.css">
@@ -11,31 +11,31 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body>
-  <div class="main-container container col-lg-9">
-    <header class="nav-container container col-lg-12">
-      <div class="row-fluid">
-        <nav class="navbar">
+<body class="bg-light">
+  <div class="main-container container col-lg-9 max-width min-width-container sticky-top nav-static p-0">
+    <header class="nav-container container col-lg-12 p-0">
+        <nav class="navbar red-nav">
           <div class="weather-date">
-            <div class="row-fluid">
               <span class="weather"><i class="fas fa-cloud"></i> 28° Managua, NI <i class="far fa-angle-right"></i></span>
-            </div>
-            <div class="row-fluid">
               <span class="date">Mon, Oct 19, 2020</span>
-            </div>
           </div>
-          <a class="col-lg-4 navbar-brand logo-link text-top" href="https://www.newsweek.com/">
-            <img class="img-fluid" id="newsweek-logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Newsweek_Logo.svg" alt="Newsweek Logo">
-          </a>
+          <div class="col-lg-4 logo-link">
+            <a class="navbar-brand" href="https://www.newsweek.com/">
+              <img class="img-fluid" id="newsweek-logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Newsweek_Logo.svg" alt="Newsweek Logo">
+            </a>
+          </div>
           <div class="login-subscribe">
             <a href="#">LOGIN</a>
             <button type="button" class="btn btn-warning rounded-pill">SUBSCRIBE <i class="far fa-angle-right"></i></button>
           </div>
+          <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+          </div>
       </nav>
-    </div>
-      <div class="row-fluid">
-        <ul class="bottom-nav navbar">
+      <nav class="bottom-nav navbar-expand-lg m-0">
+        <ul class="navbar">
           <li class="nav-item">
             <a class="nav-link" href="#">U.S.</a>
           </li>
@@ -66,15 +66,104 @@
           <li class="nav-item">
             <a class="nav-link border-left" href="#">Weather</a>
           </li>
+          <li class="nav-item search-nav">
+            <input type="text" placeholder="Search"></input>
+            <i class="fas fa-search"></i>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container col-lg-12 bg-light p-0">
+      <div class="trending col-lg-12 bg-white p-0 mt-1">
+        <ul class="nav">
           <li class="nav-item">
-            <input id="search-nav" type="text" placeholder="Search"></input>
+            <span class="nav-link black">TRENDING</span>
           </li>
           <li class="nav-item">
-            <i class="far fa-search"></i>
+            <a class="nav-link grey" href="#">DONALD TRUMP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">JOE BIDEN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">STIMULUS PACKAGE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">CORONAVIRUS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">AMY CONEY BARRETT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">2020 ELECTION</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link grey" href="#">COUNTIES THAT COUNT</a>
           </li>
         </ul>
       </div>
-    </header>
+      <!--Three Column Section Starts Here-->
+      <div class="container bg-white col-lg-12 mt-1">
+        <div class="row pt-4">
+          <div class="featured-stories col-lg-3">
+            <span class="column-title p-3">FEATURED STORIES</span>
+            <div class="card">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1654993/china-economy-retail.webp?w=790&f=f511cb19e2ef1deda5ef46ec5b17ce3d" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title">China Outshines U.S. as First Major Economy to Recover From Pandemic</h5>
+                <p class="card-text">China's economy grew 4.9 percent between July and September compared to the same quarter last year, a little slower than expected but signaling a strong recovery.</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655102/joe-biden-donald-trump.webp?w=790&f=37573d08923365dcd23d7dbe292b5a0e" alt="Trump VS Biden">
+              <div class="card-body pt-0">
+                <h5 class="card-title">15 Days to Election: What Polls Say About Biden and Trump in Swing States</h5>
+                <p class="card-text">Joe Biden appears to be favored over Donald Trump in Arizona, Florida, Michigan, Pennsylvania, North Carolina and Wisconsin—although the margin is close in some of these battleground states.</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655099/john-ratcliffe-hunter-biden-investigation.webp?w=790&f=28ff8cec4c9fab5cea30f2312cc12564" alt="Biden">
+              <div class="card-body pt-0">
+                <h5 class="card-title">Hunter Biden Emails Have 'Nothing to Do' With Russia, Intel Chief Says</h5>
+                <p class="card-text">Ratcliffe said he's tired of "people using the intelligence community to leverage some political narrative."</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655084/stockholm-sweden-april-2020.webp?w=790&f=fa226b75b7365aabd5de304480ebc2e2" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title">Sweden, Which Refused Lockdown During COVID First Wave, Imposes New Rules</h5>
+                <p class="card-text">Weekly new cases in Sweden rose for six consecutive weeks since the week commencing August 31, according to the World Health Organization.</p>
+              </div>
+            </div>
+          </div>
+          <div class="top-stories col-lg-6">
+            <span class="column-title">TOP STORY</span>
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1654889/fe-economists-banner.webp?" alt="Stimulus">
+              <div class="card-body pt-0">
+                <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1654889/fe-economists-banner.webp?" alt="Stimulus">
+              <div class="card-body pt-0">
+                <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-lg-3">
+            <span class="column-title">THE DEBATE</span>
+          </div>
+        </div>
+      </div>
+      <!--Three Column Section Ends Here-->
+    </main>
   </div>
 </body>
 </html>
