Added More Stories Section.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <!--Three Column Section Starts Here-->
       <div class="container bg-white col-lg-12 mt-1">
         <div class="row pt-4">
-          <div class="featured-stories col-lg-3">
+          <div class="featured-stories col-lg-3 p-0">
             <span class="column-title p-3">FEATURED STORIES</span>
             <div class="card">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1654993/china-economy-retail.webp?w=790&f=f511cb19e2ef1deda5ef46ec5b17ce3d" alt="China Recovery">
@@ -142,7 +142,7 @@
               </div>
             </div>
           </div>
-          <div class="top-stories col-lg-6">
+          <div class="top-stories col-lg-6 p-0">
             <span class="column-title p-3">TOP STORY</span>
             <div class="card border-bottom">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1654889/fe-economists-banner.webp?" alt="Stimulus">
@@ -159,41 +159,187 @@
               </div>
             </div>
 
-            <div class="container my-turn">
+            <div class="container my-turn pt-1">
               <span class="column-title">MY TURN</span>
               <div class="row">
                 <div class="col-lg-4">
                 <div class="card-custom">
-                  <img class="card-img-top" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?w=790&f=f51b97f896b30cc5bf22bd1e08edd489" alt="BFFLove">
-                  <div class="card-body pt-0">
-                    <h5 class="card-title">'I Fell in Love With My Best Friend and Finally Asked Her Out'</h5>
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="BFFLove">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2"">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
                   </div>
                 </div>
               </div>
 
               <div class="col-lg-4 pb-1">
-                <div class="card-custom mt-1">
-                  <img class="card-img-top embed-responsive embed-responsive-21by9" src="https://d.newsweek.com/en/full/1654124/coronavirus-parosmia-pandemic.webp?w=790&f=16a8bf575904e888837c90e649bef02a" alt="COVID Story">
-                  <div class="card-body pt-0">
-                    <h5 class="card-title text-grey">'I Had COVID, Now Food Tastes Rotten and Wine Tastes Like Oil'</h5>
+                <div class="card-custom">
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="Married at 60">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2"">'I Had COVID, Now Food Tastes Rotten and Wine Tastes Like Oil'</p>
                   </div>
                 </div>
               </div>
 
               <div class="col-lg-4">
                 <div class="card-custom">
-                  <img class="card-img-top" src="https://d.newsweek.com/en/full/1653697/brain-cancer-ironman-cancer-athlete-father-daughter.webp?w=397&h=397&f=407acecc64ed8f54a95a0bf0e733b5de" alt="Brain Cancer Story">
-                  <div class="card-body pt-0">
-                    <h5 class="card-title">'I Have Terminal Brain Cancer. I Just Did An Ironman For My 5-Year-Old'</h5>
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="Brain Cancer Story">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2"">'I Have Terminal Brain Cancer. I Just Did An Ironman For My 5-Year-Old'</p>
                   </div>
                 </div>
               </div>
               </div>
             </div>
 
+            <div class="container my-turn pt-5">
+              <span class="column-title">CULTURE & TRAVEL</span>
+              <div class="row">
+                <div class="col-lg-4">
+                <div class="card-custom">
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="BFFLove">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2"">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 pb-1">
+                <div class="card-custom">
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="COVID Story">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2"">'I Had COVID, Now Food Tastes Rotten and Wine Tastes Like Oil'</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 p-0">
+                <div class="card-custom">
+                  <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="Brain Cancer Story">
+                  <div class="card-body p-0 m-0">
+                    <p class="card-text font-weight-bold mt-2">'I Have Terminal Brain Cancer. I Just Did An Ironman For My 5-Year-Old'</p>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+
+            <div class="container mt-5">
+              <span class="column-title border-bottom-title">MORE STORIES</span>
+              <hr/>
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal p-3">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+  
+              <div class="card-horizontal p-3">
+                <div class="card-img-left"></div>
+                <div class="card-body-right">
+                  <h5 class="card-title">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h5>
+                  <p class="card-text">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
+                </div>
+              </div>
+              <hr class="border-top">
+            </div>
+
           </div>
-          <div class="col-lg-3">
-            <span class="column-title debate">THE DEBATE</span>
+          <div class="col-lg-3 p-0">
+            <span class="column-title border-bottom-title">THE DEBATE</span>
+            <hr class="border-top">
+            </div>
           </div>
         </div>
       </div>
