--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <div class="card-horizontal pl-0">
             <img class="img-fluid" src="https://d.newsweek.com/en/full/1590519/claire-finkelstein-richard-w-painter-2.webp?w=150&h=150&f=890e9e80b6653bf527efb8506fb2601b" alt="BidenTrump">
             <div class="card-body-right">
-              <p class="card-title-ms font-weight-bolder m-0">McConnell's Rush to Confirm Barrett Ignores Crucial Questions of Principle</p>
+              <p class="card-title-ms font-weight-bolder m-0 red-hover">McConnell's Rush to Confirm Barrett Ignores Crucial Questions of Principle</p>
               <p class="card-text-ms">BY CLAIRE O. FINKELSTEIN AND RICHARD W. PAINTER</p>
             </div>
           </div>
@@ -424,16 +424,109 @@
           </div>
 
             </div>
-          </div>
+          </div> 
           <div class="container bg-white col-12 text-center border-bottom">
             <div class="container d-flex d-flex justify-content-center text-center">
               <img class="bg-danger" src="favicon.png" alt="logo">
               <h5 class="font-weight-bolder ml-3 mt-2">IN THE MAGAZINE</h5>
             </div>
           </div>
-        </div>
       </div>
       <!--Three Column Section Ends Here-->
+      <div class="magazine container bg-white col-lg-12 mt-1">
+        <div class="row pt-4">
+          <div class="col-3">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1653518/cover-october-23-2020.webp?w=290&h=387&q=90&f=b389f931e013092b40bde9c93666e8fb" alt="Book">
+              <div class="card-block">
+                <a href="#" class="btn btn-secondary w-100 font-weight-bolder text-black">
+                  SEE ALL FEATURES <i class="far fa-angle-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1649746/cover-qanon-banner.webp?w=466&h=311&l=48&t=40&q=90&f=661310f59c90b9a906e0bbfd608f8481" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">COVER</div> TECH & SCIENCE
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  As QAnon Conspiracies Spread, Scientists Fight a Misinformation Pandemic
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1649197/per-pennsylvania-vote.webp?w=466&h=311&q=90&f=1f5ff97d10b0be7b9b7b655e3205cadc" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> POLITICS
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  If We Don't Win in Pennsylvania, 'We Are So Screwed,' Biden Insider Says
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&h=311&q=90&f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> OPINION
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  Avoid War, Defend America, Recognize Taiwan
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row pt-4">
+          <div class="col-3 mt-2">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1629920/offshore-islands-taiwan-strait.webp?w=466&h=311&q=90&f=070b1828435e50700505810a76d0cc7c" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> CULTURE
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  Don't Rush to Fully Normalize Relations With Taiwan
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-2">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1651905/parting-shot-trevor-noah.webp?w=466&h=311&l=45&t=48&q=90&f=4f96d72e1efcedb6d84efbe246c2e3d0" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">DOWNTIME</div> CULTURE
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  Trevor Noah Says the Left and the Right Can Agree on at Least One Thing
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-2">
+            <div class="card">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1629912/taipei-taiwan-cityscape.webp?w=466&h=311&q=90&f=64a83a51974d9fc18e8404a93eba5fdf" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title d-flex mt-2">
+                  <div class="bg-danger mr-1 text-white">PERISCOPE</div> OPINION
+                </h4>
+                <p class="card-text font-weight-bolder text-black">
+                  Avoid War, Defend America, Recognize Taiwan
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="col-lg-12"></footer>
   </div>
