Completed Editor's Pick section.

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           </div>
       </div>
       <!--Three Column Section Ends Here-->
-      <div class="magazine container bg-white col-lg-12 mt-1">
+      <div class="magazine container bg-white col-lg-12 mt-1 mb-4">
         <div class="row pt-4">
           <div class="col-3">
             <div class="card">
@@ -527,6 +527,92 @@
           </div>
         </div>
       </div>
+      <div class="container bg-white col-12 text-center border-bottom">
+        <div class="container d-flex d-flex justify-content-center text-center">
+          <img class="bg-danger" src="favicon.png" alt="logo">
+          <h5 class="font-weight-bolder ml-3 mt-2">EDITOR'S PICK</h5>
+        </div>
+      </div>
+
+      <div class="editorpick container bg-white col-lg-12 mt-1 mb-4">
+        <div class="row pt-4">
+          <div class="col-3 mt-4">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655499/st-patricks.webp?w=397&h=265&f=12bb1581281501a4c6c6eb35ad3281c5" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">Superspreader Gave COVID to 18 People at St. Patrick's Day Celebration</h5>
+                <p class="card-text text-grey">The 43-year-old man is believed to be responsible for half of the locally acquired coronavirus cases recorded in Ho Chi Minh City up until September 15.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655516/tiffany-trump.webp?w=397&h=265&f=6179a51cef54305195718a1218555b87" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">What Tiffany Trump Said At Pride Event For Her Dad's Re-election</h5>
+                <p class="card-text text-grey">"I have friends of mine who reach out and they say how could you support your father, we know your best friends are gay," the youngest Trump daughter said at the Florida event.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655413/trump.webp?w=397&h=265&f=b62f2d0664fc3f10795cd47742521525" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">China Outshines U.S. as First Major Economy to Recover From Pandemic</h5>
+                <p class="card-text text-grey">\The president has persistently pressed at his Democratic rival amid recent allegations, with his campaign outlining his intention to keep doing so.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-4">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1641848/mark-zuckerberg.webp?w=397&h=265&l=50&t=16&f=265223e3dc6e2f4ebefbc73200d8f21e" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">Facebook's Effort to Suppress the Hunter Biden NY Post Story Worked</h5>
+                <p class="card-text text-grey">While Twitter's actions had little impact on the reach of the story, data shows that Facebook's suppression of the article caused it to reach roughly half the readers that major anti Trump scoops did.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row pt-4">
+          <div class="col-3 mt-2">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655320/chicago-police-homicide-rate-midwest.webp?w=397&h=265&f=e0d8d97a438b934b116eed35b03b9f76" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">Chicago, Louisville Among 20 US Cities Seeing 50% Homicide Rate Increases</h5>
+                <p class="card-text text-grey">"This dynamic is playing out in every metro in the nation no matter the demographic of residents, the party in charge or the state the city calls home," Indianapolis mayor Joe Hogsett said last week.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-2">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655188/trump-versus-biden.webp?w=397&h=265&f=1d7928e8bbd2475dde529a91df656092" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">Joe Biden the Narrow Favorite to Win Crucial Battleground State of Florida</h5>
+                <p class="card-text text-grey">The race between Trump and Biden has been tight in Florida, with the latter taking a slight advantage over the past month.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-2">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655166/qanon-conspiracy-theorist-donald-trump-rally.webp?w=397&h=265&f=6cdfa777ca848c8fc04ecac353774420" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">TikTokkers Are Getting Banned for Sharing QAnon Conspiracies</h5>
+                <p class="card-text text-grey">TikTok has become a battleground in the lead-up to the US election, and has started clamping down on misinformation and unlabeled political ads.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mt-2">
+            <div class="card border-none">
+              <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655211/orionid-meteor-shower.webp?w=397&h=265&f=c1dbd5709881b6e24cda6327cc7b42cc" alt="China Recovery">
+              <div class="card-body pt-0">
+                <h5 class="card-title font-weight-bolder">Orionid Meteor Shower Peaks Ahead of Rare Halloween Blue Moon</h5>
+                <p class="card-text text-grey">The moon will appear just 23 percent illuminated on the night of the peak, which could help visibility.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
     <footer class="col-lg-12"></footer>
   </div>
