--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body class="bg-light col-xs-12">
-  <div class="main-container container-fluid col-lg-8 col-xs-12 max-width min-width-container nav-static p-0">
+<body class="bg-light col-12 p-0">
+  <div class="main-container container-fluid col-xl-8 col-lg-12 col-xs-12 max-width min-width-container nav-static p-0">
     <header class="nav-container container-fluid col-12 p-0">
         <nav class="navbar col red-nav">
           <div class="weather-date flex-column justify-content-space-between text-white">
@@ -37,7 +37,7 @@
             <i class="fas fa-bars"></i>
           </div>
       </nav>
-      <nav class="bottom-nav navbar-expand-lg m-0">
+      <nav class="bottom-nav d-md-none d-xs-none d-sm-none navbar-expand-lg m-0">
         <ul class="navbar">
           <li class="nav-item">
             <a class="nav-link" href="#">U.S.</a>
@@ -77,7 +77,7 @@
       </nav>
     </header>
     <main class="container col-lg-12 bg-light p-0">
-      <div class="trending col-lg-12 bg-white p-0 mt-1 hideme">
+      <div class="trending d-md-none d-xs-none d-sm-none col-lg-12 bg-white p-0 mt-1 hideme">
         <ul class="nav">
           <li class="nav-item">
             <span class="nav-link text-black">TRENDING</span>
@@ -108,7 +108,7 @@
       <!--Three Column Section Starts Here-->
       <div class="container bg-white col-lg-12 mt-1">
         <div class="row pt-4">
-          <div class="col-lg-3 position-sticky p-0">
+          <div class="col-lg-3 col-md-5 position-sticky p-0">
           <div class="featured-stories">
             <span class="column-title p-3">FEATURED STORIES</span>
             <div class="card border-none">
@@ -144,7 +144,7 @@
             </div>
           </div>
           </div>
-            <div class="col-lg-5 pl-2 overflow-auto">
+            <div class="col-lg-5 col-md-7 pl-2 overflow-auto">
               <div class="top-stories">
                 <span class="column-title p-3">TOP STORY</span>
                 <div class="card border-bottom">
@@ -169,7 +169,7 @@
                     <div class="card-custom">
                       <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="BFFLove">
                       <div class="card-body p-0 m-0">
-                        <p class="card-text font-weight-bold mt-2"">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
+                        <p class="card-text font-weight-bold mt-2">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
                       </div>
                     </div>
                   </div>
@@ -178,7 +178,7 @@
                     <div class="card-custom">
                       <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="Married at 60">
                       <div class="card-body p-0 m-0">
-                        <p class="card-text font-weight-bold mt-2"">'I Had COVID, Now Food Tastes Rotten and Wine Tastes Like Oil'</p>
+                        <p class="card-text font-weight-bold mt-2">'I Had COVID, Now Food Tastes Rotten and Wine Tastes Like Oil'</p>
                       </div>
                     </div>
                   </div>
@@ -187,7 +187,7 @@
                     <div class="card-custom">
                       <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="Brain Cancer Story">
                       <div class="card-body p-0 m-0">
-                        <p class="card-text font-weight-bold mt-2"">'I Have Terminal Brain Cancer. I Just Did An Ironman For My 5-Year-Old'</p>
+                        <p class="card-text font-weight-bold mt-2">'I Have Terminal Brain Cancer. I Just Did An Ironman For My 5-Year-Old'</p>
                       </div>
                     </div>
                   </div>
@@ -201,7 +201,7 @@
                     <div class="card-custom">
                       <img class="img-fluid" src="https://d.newsweek.com/en/full/1654837/best-friends-love-relationships.webp?" alt="BFFLove">
                       <div class="card-body p-0 m-0">
-                        <p class="card-text font-weight-bold mt-2"">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
+                        <p class="card-text font-weight-bold mt-2">'I Fell in Love With My Best Friend and Finally Asked Her Out'</p>
                       </div>
                     </div>
                   </div>
@@ -338,7 +338,7 @@
                 </div>
               </div>
             </div>
-        <div class="position-sticky col-lg-4 p-0">
+        <div class="position-sticky col-md-12 col-lg-4 p-0">
           <div class="debate-stories">
             <span class="column-title border-bottom-title">THE DEBATE</span>
             <hr class="border-top">
@@ -438,9 +438,9 @@
       </div>
       </div>
       <!--Three Column Section Ends Here-->
-      <div class="magazine container bg-white col-lg-12 mt-1 mb-4">
+      <div class="magazine container bg-white col-12 mt-1 mb-4">
         <div class="row pt-4">
-          <div class="col-3">
+          <div class="col-3 col-xs-1">
             <div class="card">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1653518/cover-october-23-2020.webp?w=290&h=387&q=90&f=b389f931e013092b40bde9c93666e8fb" alt="Book">
               <div class="card-block">
@@ -450,7 +450,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-4">
+          <div class="col-3 col-xs-1 mt-4">
             <div class="card">
               <img class="card-img-top" src="https://d.newsweek.com/en/full/1649746/cover-qanon-banner.webp?w=466&h=311&l=48&t=40&q=90&f=661310f59c90b9a906e0bbfd608f8481" alt="Card image cap">
               <div class="card-block">
@@ -540,7 +540,7 @@
       </div>
       <div class="editorpick container bg-white col-lg-12 mt-1 mb-4 border-bottom">
         <div class="row pt-4">
-          <div class="col-3 mt-4">
+          <div class="col-3 col-md-6 mt-4">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655499/st-patricks.webp?w=397&h=265&f=12bb1581281501a4c6c6eb35ad3281c5" alt="China Recovery">
               <div class="card-body pt-0">
@@ -549,7 +549,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-4">
+          <div class="col-3 col-md-6 mt-4">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655516/tiffany-trump.webp?w=397&h=265&f=6179a51cef54305195718a1218555b87" alt="China Recovery">
               <div class="card-body pt-0">
@@ -558,7 +558,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-4">
+          <div class="col-3 col-md-6 mt-4">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655413/trump.webp?w=397&h=265&f=b62f2d0664fc3f10795cd47742521525" alt="China Recovery">
               <div class="card-body pt-0">
@@ -567,7 +567,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-4">
+          <div class="col-3 col-md-6 mt-4">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1641848/mark-zuckerberg.webp?w=397&h=265&l=50&t=16&f=265223e3dc6e2f4ebefbc73200d8f21e" alt="China Recovery">
               <div class="card-body pt-0">
@@ -578,7 +578,7 @@
           </div>
         </div>
         <div class="row pt-4">
-          <div class="col-3 mt-2">
+          <div class="col-3 col-md-6 mt-2">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655320/chicago-police-homicide-rate-midwest.webp?w=397&h=265&f=e0d8d97a438b934b116eed35b03b9f76" alt="China Recovery">
               <div class="card-body pt-0">
@@ -587,7 +587,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-2">
+          <div class="col-3 col-md-6 mt-2">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655188/trump-versus-biden.webp?w=397&h=265&f=1d7928e8bbd2475dde529a91df656092" alt="China Recovery">
               <div class="card-body pt-0">
@@ -596,7 +596,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-2">
+          <div class="col-3 col-md-6 mt-2">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655166/qanon-conspiracy-theorist-donald-trump-rally.webp?w=397&h=265&f=6cdfa777ca848c8fc04ecac353774420" alt="China Recovery">
               <div class="card-body pt-0">
@@ -605,7 +605,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mt-2">
+          <div class="col-3 col-md-6 mt-2">
             <div class="card border-none">
               <img class="card-img-top p-3" src="https://d.newsweek.com/en/full/1655211/orionid-meteor-shower.webp?w=397&h=265&f=c1dbd5709881b6e24cda6327cc7b42cc" alt="China Recovery">
               <div class="card-body pt-0">
@@ -915,7 +915,7 @@
       </div>
     </main>
     <footer class="col-lg-12 bg-white max-width p-0">
-      
+
     </footer>
   </div>
 </body>
