--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <span class="weather font-weight-bolder"><i class="fas fa-cloud"></i> 28° Managua, NI <i class="far fa-angle-right"></i></span>
               <span class="date">Mon, Oct 19, 2020</span>
           </div>
-          <div class="col-xs-3 col-lg-4 p-0 logo-link">
+          <div class="col-xs-3 col-xs-5 col-sm-5 col-md-5 col-lg-4 p-0 logo-link">
             <a class="navbar-brand" href="https://www.newsweek.com/">
               <img class="img-fluid" id="newsweek-logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Newsweek_Logo.svg" alt="Newsweek Logo">
             </a>
@@ -37,7 +37,7 @@
             <i class="fas fa-bars"></i>
           </div>
       </nav>
-      <nav class="bottom-nav d-md-none d-xs-none d-sm-none navbar-expand-lg m-0">
+      <nav class="bottom-nav d-xl-block d-lg-block d-md-none d-xs-none d-sm-none navbar-expand-lg m-0">
         <ul class="navbar">
           <li class="nav-item">
             <a class="nav-link" href="#">U.S.</a>
@@ -77,7 +77,7 @@
       </nav>
     </header>
     <main class="container col-lg-12 bg-light p-0">
-      <div class="trending d-md-none d-xs-none d-sm-none col-lg-12 bg-white p-0 mt-1 hideme">
+      <div class="trending d-xl-block d-lg-block d-md-none d-xs-none d-sm-none col-lg-12 bg-white p-0 mt-1 hideme">
         <ul class="nav">
           <li class="nav-item">
             <span class="nav-link text-black">TRENDING</span>
