--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
-<body class="bg-light col-12 p-0">
+<body class="bg-light col-xs-12 col-md-12 col-lg-12 col-xl-12 p-0">
   <div class="main-container container-fluid col-xl-8 col-lg-12 col-xs-12 max-width min-width-container nav-static p-0">
     <header class="nav-container container-fluid col-12 p-0">
         <nav class="navbar col red-nav">
